# Copyright 2023 RobustMQ Team
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "connector"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Async
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
bson.workspace = true
chrono.workspace = true

# Logging
tracing.workspace = true

# External connectors
rdkafka.workspace = true
elasticsearch.workspace = true
redis.workspace = true
mongodb.workspace = true
pulsar.workspace = true
lapin.workspace = true
reqwest.workspace = true
sqlx = { workspace = true, features = ["runtime-tokio", "mysql", "postgres"] }

# Internal
common-base.workspace = true
common-config.workspace = true
common-metrics.workspace = true
grpc-clients.workspace = true
metadata-struct.workspace = true
storage-adapter.workspace = true
protocol.workspace = true
governor.workspace = true
dashmap.workspace = true

[dev-dependencies]
tempfile.workspace = true
