[package]
name = "journal-server"
version.workspace = true
edition.workspace = true
license.workspace = true


[dependencies]
common-base.workspace = true
bytes.workspace = true
axum.workspace = true
thiserror.workspace = true
tonic.workspace = true
protocol.workspace = true
tokio.workspace = true
clients.workspace = true
tokio-util.workspace = true
futures.workspace = true
dashmap.workspace = true
