# Copyright 2023 RobustMQ Team
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "kafka-broker"
version.workspace = true
edition.workspace = true
license.workspace = true


[dependencies]
axum.workspace = true
common-base.workspace = true
common-config.workspace = true
tokio.workspace = true
tokio-util.workspace = true
network-server.workspace = true
metadata-struct.workspace = true
broker-core.workspace = true
grpc-clients.workspace = true
tracing.workspace = true
protocol.workspace = true
kafka-protocol.workspace = true
thiserror.workspace = true
storage-adapter.workspace = true
bytes = "1.10.1"
serde = { version = "1.0.228", features = ["derive"] }