[package]
name = "meta"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]

[dependencies]
tokio.workspace = true
tonic.workspace = true
common.workspace = true
protocol.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
rocksdb.workspace = true
futures.workspace = true
futures-util.workspace =true
bytes.workspace = true
lazy_static.workspace = true
raft.workspace =true
slog = "2"
slog-term = "2.9.0"
slog-async = "2.8.0"
