[package]
name = "meta"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
tonic.workspace = true
common.workspace = true
protocol.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
rocksdb.workspace = true
futures.workspace = true
futures-util.workspace = true
bytes.workspace = true
lazy_static.workspace = true
bincode.workspace = true
ahash.workspace = true
byteorder.workspace = true

raft = { version = "0.7",features = ["prost-codec"], default-features = false }
prost = "0.11"

slog = "2"
slog-term = "2.9.0"
slog-async = "2.8.0"
