# Copyright 2023 RobustMQ Team
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "mqtt-broker"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
axum.workspace = true
tonic-web.workspace = true
tower-http = { workspace = true, features = ["cors"] }
thiserror.workspace = true
bytes.workspace = true
protocol.workspace = true
common-base.workspace = true
tokio-util.workspace = true
futures.workspace = true
serde_json.workspace = true
tonic.workspace = true
dashmap.workspace = true
serde.workspace = true
lazy_static.workspace = true
storage-adapter.workspace = true
grpc-clients.workspace = true
metadata-struct.workspace = true
third-driver.workspace = true
regex.workspace = true
placement-center.workspace = true
futures-util.workspace = true
axum-extra.workspace = true
axum-server.workspace = true
rustls-pemfile.workspace = true
tokio-rustls.workspace = true
mysql.workspace = true
paho-mqtt.workspace = true
log.workspace = true
ipnet.workspace = true
os_info.workspace = true
bincode.workspace = true
grep.workspace = true
delay-message.workspace = true
schema-register.workspace = true
# observability
prometheus.workspace = true
prometheus-client.workspace = true
opentelemetry.workspace = true
quinn.workspace = true
rcgen.workspace = true
rustls-pki-types.workspace = true
rustls.workspace = true
bindgen.workspace = true
rdkafka.workspace = true


[dev-dependencies]
# test
googletest.workspace = true
robustmq-test.workspace = true
