# Copyright 2023 RobustMQ Team
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "mqtt-broker"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
axum.workspace = true
thiserror.workspace = true
bytes.workspace = true
protocol.workspace = true
common-base.workspace = true
common-config.workspace = true
tokio-util.workspace = true
futures.workspace = true
serde_json.workspace = true
tonic.workspace = true
dashmap.workspace = true
serde.workspace = true
storage-adapter.workspace = true
grpc-clients.workspace = true
metadata-struct.workspace = true
third-driver.workspace = true
regex.workspace = true
futures-util.workspace = true
tokio-rustls.workspace = true
mysql.workspace = true
tracing.workspace = true
ipnet.workspace = true
os_info.workspace = true
grep.workspace = true
delay-message.workspace = true
schema-register.workspace = true
# observability
quinn.workspace = true
rustls-pki-types.workspace = true
rustls.workspace = true
rdkafka.workspace = true
sysinfo.workspace = true
chrono.workspace = true
strum.workspace = true
strum_macros.workspace = true
network-server.workspace = true
common-metrics.workspace = true
reqwest.workspace = true
broker-core.workspace = true
pulsar.workspace = true
mongodb.workspace = true
bson.workspace = true
lapin.workspace = true
elasticsearch.workspace = true
sqlx = { workspace = true, features = ["mysql", "postgres", "runtime-tokio"] }
rocksdb-engine.workspace = true
# security
r2d2.workspace = true
r2d2_mysql.workspace = true
r2d2_postgres.workspace = true
redis.workspace = true
md5.workspace = true
sha1.workspace = true
sha2.workspace = true
bcrypt.workspace = true
pbkdf2.workspace = true
hmac.workspace = true
hex.workspace = true
base64.workspace = true
jsonwebtoken.workspace = true


[dev-dependencies]
# test
robustmq-test.workspace = true
tempfile.workspace = true
