[package]
name = "protocol"
version.workspace = true
edition.workspace = true
license.workspace = true


[dependencies]
bytes.workspace = true
axum.workspace = true
thiserror.workspace = true
tonic.workspace =true
prost = { version = "0.12.3"}
tonic-build = "0.10.2"

[build-dependencies]
prost-build = "0.12.3"
