[package]
name = "protocol"
version.workspace = true
edition.workspace = true
license.workspace = true


[dependencies]
bytes.workspace = true
axum.workspace = true
thiserror.workspace = true
tonic.workspace = true
prost.workspace = true
tonic-build.workspace = true
tokio-util.workspace = true
bincode.workspace = true
tokio.workspace = true
futures.workspace = true
common.workspace =true