# Copyright 2023 RobustMQ Team
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "storage-adapter"
version.workspace = true
edition.workspace = true
license.workspace = true


[dependencies]
tracing.workspace = true
bytes.workspace = true
axum.workspace = true
thiserror.workspace = true
common-base.workspace = true
grpc-clients.workspace = true
protocol.workspace = true
tokio.workspace = true
tokio-util.workspace = true
dashmap.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
third-driver.workspace = true
mysql.workspace = true
metadata-struct.workspace = true
rocksdb.workspace = true
rocksdb-engine.workspace = true
journal-client.workspace = true
futures.workspace = true
opendal.workspace = true
r2d2_mysql.workspace = true
common-config.workspace = true
