[package]
name = "storage-engine"
version.workspace = true
edition.workspace = true
license.workspace = true


[dependencies]
common.workspace =true
bytes.workspace = true
axum.workspace = true
thiserror.workspace = true
tonic.workspace = true
protocol.workspace = true
tokio.workspace = true
clients.workspace =true