# Copyright 2023 RobustMQ Team
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "common-base"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
lazy_static.workspace = true
prometheus.workspace = true
thiserror.workspace = true
snowflake.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
uuid.workspace = true
env_logger = "0.10.0"
local-ip-address = "0.6.1"
tonic.workspace = true
humantime-serde.workspace = true
prost.workspace = true
rocksdb.workspace = true
serde_yaml.workspace = true
log4rs.workspace = true
log.workspace = true
bincode.workspace = true
mysql.workspace = true
clap.workspace = true
regex.workspace = true
opendal.workspace = true
prometheus-client.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
valico.workspace = true
apache-avro.workspace = true
crc32fast.workspace = true
tempfile.workspace = true
