# Copyright 2023 RobustMQ Team
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "common-base"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
lazy_static.workspace = true
prometheus.workspace = true
thiserror.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
uuid.workspace = true
local-ip-address = { workspace = true }
tonic.workspace = true
prost.workspace = true
rocksdb.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
console-subscriber = { workspace = true, features = ["grpc-web"] }
bincode.workspace = true
mysql.workspace = true
clap.workspace = true
regex.workspace = true
opendal.workspace = true
valico.workspace = true
apache-avro.workspace = true
crc32fast.workspace = true
tempfile.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
anyhow.workspace = true
quinn.workspace = true
rustls.workspace = true
r2d2.workspace = true
r2d2_mysql.workspace = true
r2d2_postgres.workspace = true
redis.workspace = true
governor.workspace = true

# A custom cfg for enabling tokio-console in tracing-subscriber
# Enable this by running with `RUSTFLAGS="--cfg tokio_console"`
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tokio_console)'] }

[features]
embed_version = []
