# Copyright 2023 RobustMQ Team
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "metadata-struct"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
common-base.workspace = true
serde_json.workspace = true
protocol.workspace = true
bytes.workspace = true
tracing.workspace = true
dashmap.workspace = true
crc32fast.workspace = true
tokio.workspace = true
lazy_static.workspace = true
clap.workspace = true
pulsar.workspace = true