# Copyright 2023 RobustMQ Team
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "network-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
protocol.workspace = true
serde.workspace = true
common-base.workspace = true
tracing.workspace = true
dashmap.workspace = true
axum.workspace = true
futures.workspace = true
tokio-util.workspace = true
tokio-rustls.workspace = true
quinn.workspace = true
bytes.workspace = true
common-metrics.workspace = true
metadata-struct.workspace = true
grpc-clients.workspace = true
futures-util.workspace = true
rustls-pemfile.workspace = true
common-config.workspace = true
axum-extra.workspace = true
axum-server.workspace = true
kafka-protocol.workspace = true
broker-core.workspace = true