# Copyright 2023 RobustMQ Team
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "common-security"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde_json.workspace = true
pprof.workspace = true
axum.workspace = true
bytes.workspace = true
metadata-struct.workspace = true
common-base.workspace = true
common-metrics.workspace = true
tracing.workspace = true
dashmap.workspace = true
async-trait.workspace = true
reqwest.workspace = true
serde.workspace = true
protocol.workspace = true
chrono.workspace = true
mongodb.workspace = true
futures.workspace = true
r2d2.workspace = true
r2d2_mysql.workspace = true
r2d2_postgres.workspace = true
third-driver.workspace = true
redis.workspace = true
common-config.workspace = true
grpc-clients.workspace = true
broker-core.workspace = true
clap.workspace = true

[dev-dependencies]
mockall.workspace = true
